# danalock-wired

./: .gitignore  usecases.rst
case/: block.py  cam.py  campart2.py  holder.py  lid.py  magnetconnholder1.py  magnetconnholder2.py  ring.py  spacer.py  spring.py  stopper.py  usbcatch.py  utils.py  vrider1.py  vrider2.py
esp32/: CMakeLists.txt  sdkconfig
esp32/main/: CMakeLists.txt  console.cpp  defines.h  encoder.cpp  encoder.h  led.cpp  led.h  main.cpp  motor.cpp  motor.h  switches.cpp  switches.h
esp8266/: sdkconfig
esp8266/main/: CMakeLists.txt  atomic.c  component.mk  console.cpp  defines.h  encoder.cpp  encoder.h  led.cpp  led.h  main.cpp  motor.cpp  motor.h  switches.cpp  switches.h
kicad/: danalock-cache.lib  danalock.kicad_pcb  danalock.kicad_prl  danalock.kicad_pro  danalock.kicad_sch  danalock.pro  danalock.sch  danalock.sch-bak  fp-info-cache  fp-lib-table  sym-lib-table
kicad/libs/: esp32mini-shield-inner.kicad_sym  esp32mini-shield-inner.lib
kicad/pretty/hal9k.pretty/: ESP32mini_shield_inner.kicad_mod
teardown/: teardown.txt
